--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="C:\Users\SURYA B.S\Documents\Wed Development\HTML - Personal Website\Batman.png" alt="Batman" width="200" height="200"></td>
+                <td><img src="Batman.png" width="200" height="200"></td>
                 <td><h1>Surya B S</h1>
                     <p><em><strong>CEO and Founder of <a href="https://investor.fb.com/home/default.aspx">Meta</a> </strong></em></p>
                     <p>I'm a Web Developer. I drink coffee and code.</p></td>
