--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li>Listening to music</li>
             <li>Reading books</li>
         </ol>
-        <h3><a href="C:\Users\SURYA B.S\Documents\Wed Development\02_Contact_Details.html">Contact-details</a></h3>
+        <h3><a href="contact.html">Contact-details</a></h3>
 
     </body>
 
